--- a/generic.html
+++ b/generic.html
@@ -25,7 +25,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="main.html" class="logo">
+								<a href="index.html" class="logo">
 									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
 								</a>
 
@@ -43,7 +43,7 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="main.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="generic.html">Ipsum veroeros</a></li>
 							<li><a href="elements.html">Tempus etiam</a></li>
 							<li><a href="elements.html">Consequat dolor</a></li>
